--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "cross-env": "^5.2.0",
+    "handlebars": "^4.5.0",
     "mocha": "^6.1.4",
     "prettier": "^1.17.1"
   }
